# btc-test-bot

./: .replit  GCP_DEPLOYMENT_GUIDE.md  main.py  pyproject.toml  replit.md  test_api.py  test_short.py
attached_assets/: Pasted--BTCUSDT-2025-11-import-ccxt-import-pandas-as-pd-import-time-impo-1764351064880_1764351064881.txt  Pasted--coding-utf-8-from-binance-um-futures-import-UMFutures-import-pandas-as-pd-import-time-imp-1764359667329_1764359667329.txt  Pasted--coding-utf-8-from-binance-um-futures-import-UMFutures-import-pandas-as-pd-import-time-imp-1764361347762_1764361347763.txt  Pasted--coding-utf-8-import-os-import-time-import-logging-from-threading-import-Thread-from-decim-1764362590254_1764362590254.txt  Pasted--coding-utf-8-import-os-import-time-import-logging-from-threading-import-Thread-from-decim-1764492755343_1764492755344.txt  Pasted--coding-utf-8-import-os-import-time-import-logging-import-pandas-as-pd-from-threading-impo-1764367252115_1764367252115.txt  Pasted--import-ccxt-pandas-as-pd-time-os-from-flask-import-Flask-from-threading-i-1764350076300_1764350076300.txt
